--- a/roelof.css
+++ b/roelof.css
@@ -36,8 +36,8 @@ h2{
 
 p{
     text-align: center;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
     margin-bottom: 30px; 
 
 }
@@ -46,6 +46,11 @@ p{
 button{
     background-color: white;;
     color: var(--violet);
+    border-color: var(--violet);
+    padding: 10px 60px;
+    border-radius: 20px;
+    font-weight: 400;
+    margin-bottom: 50px; 
 }
 
 
@@ -72,11 +77,16 @@ button{
 
 }
 
-
-
-
 .social {
+    display: flex;
+    justify-content: center;
 
 }
 
+.icon{
+    margin-left: 10px;
+    width: 32px;
+    height: 32px;
+    margin-bottom: 10px;
+}
 
