--- a/roelof.css
+++ b/roelof.css
@@ -27,8 +27,8 @@ body{
 h2{
     margin-left: 40px;
     margin-right: 40px;
+    margin-top: 40px;
     line-height: 1.5;
-    margin-bottom: 30px;
     font-family: Poppings;
     font-weight: 600;
 
@@ -39,9 +39,7 @@ p{
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 30px; 
-
 }
-
 
 button{
     background-color: white;;
@@ -53,6 +51,11 @@ button{
     margin-bottom: 50px; 
 }
 
+button:hover{
+    background-color: var(--magenta);
+    color: white; 
+}
+
 
 .container{
     width: 315px;
@@ -62,6 +65,11 @@ button{
     width: 120px;
     height: 27.9px;
     margin-bottom: 50px;
+}
+
+.image {
+    width: 315px;
+    height: 225px;
 }
 
 .image img{
@@ -88,5 +96,70 @@ button{
     width: 32px;
     height: 32px;
     margin-bottom: 10px;
+}
+
+.icon:hover{
+    color: var(--magenta); 
+}
+
+@media screen and (min-width: 1000px) {
+
+    body{
+        background-image: url("./images/bg-desktop.svg");
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-top: 40px;
+        margin-left: 40px;
+    }
+
+    h2{
+        margin-right: 400px;
+        margin-left: 50px;
+        margin-bottom: 30px;
+    }
+
+    p{
+        text-align: left;
+        margin-left: 50px;
+        margin-right: 200px; 
+    }
+
+     .image img{
+        width: 709px;
+        height: 506px;
+    }
+
+    .container{
+       width: 1440px;
+    }
+
+    .body{
+        display: flex; 
+        flex-direction: row;
+        margin-bottom: 20px;
+        margin-top: 70px;
+    }
+
+    .image{
+        width: 709px;
+        height: 506px;
+    }
+
+    .action{
+        width: 709px;
+        margin-top: 50px;
+    }
+
+    .button-div{
+        justify-content: flex-start;
+        margin-left: 50px;
+    }
+
+    .social{
+        justify-content: flex-end ;
+        margin-right: 300px;
+    }
+
+
 }
 
